migrate to Java 17