@@ -11,7 +11,8 @@ subprojects {
         mavenCentral()
     }
 
-    sourceCompatibility = 1.11
+    sourceCompatibility = 17
+    targetCompatibility = 17
 
     dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
@@ -20,5 +21,17 @@ subprojects {
 
     test {
         useJUnitPlatform()
+    }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += "--enable-preview"
+    }
+
+    tasks.withType(Test) {
+        jvmArgs += "--enable-preview"
+    }
+
+    tasks.withType(JavaExec) {
+        jvmArgs += '--enable-preview'
     }
 }
